add SASL_PLAINTEXT, SASL_SSL with Kerberos